added augment text endpoint
